--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,8 @@
 
 .calendar__wrapper {
   display: flex;
+  justify-content: center;
+  gap: 1.5rem;
   flex: 1;
 }
 
@@ -42,7 +44,7 @@
 .calendar__header--container {
   width: 250px;
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   justify-content: space-between;
   gap: 1.5rem;
   transform: translateX(-50px);
@@ -73,7 +75,7 @@
 }
 
 .day__text {
-  font-size: 0.875rem;
+  font-size: 1rem;
   line-height: 1.25rem;
   /* padding: 0.25rem; */
   margin-left: 12px;
@@ -199,6 +201,7 @@
   outline: none;
   height: 48px;
   border-radius: 12px;
+  cursor: pointer;
 }
 
 .search-icon {
@@ -213,4 +216,86 @@
 
 .dim {
   opacity: 0.5;
+  color: inherit;
+}
+
+/* sidebar */
+
+.sidebar {
+  width: 274px;
+}
+
+.sidebar__form {
+  display: flex;
+  flex-direction: column;
+}
+
+.checkbox-input {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  margin-top: 0.5rem;
+}
+.checkbox-input input[type="checkbox"] {
+  accent-color: #e40038;
+  width: 1.125rem;
+  height: 1.125rem;
+  cursor: pointer;
+}
+
+.checkbox-input label {
+  font-size: 0.75rem;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.select-input,
+.button-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin: 1.5rem 0;
+}
+
+.select-input select {
+  border: 0;
+  outline: none;
+  background-color: #e9ecf1;
+  border-radius: 0.75rem;
+  padding: 0.75rem 1rem;
+  width: 274px;
+  cursor: pointer;
+  font-weight: 500;
+  letter-spacing: 0.32px;
+}
+
+/* .select-input option {
+  background-color: #f9fafc;
+  padding: 0.75rem 1rem;
+  width: 274px;
+  cursor: pointer;
+  font-weight: 500;
+  letter-spacing: 0.32px;
+} */
+
+.button-container button {
+  border: none;
+  outline: none;
+  font-size: 0.75rem;
+  font-weight: 600;
+  text-align: center;
+  padding: 1rem 1.5rem;
+  border-radius: 0.75rem;
+  cursor: pointer;
+  letter-spacing: 0.25px;
+}
+
+.button-container button:first-child {
+  background-color: #e70029;
+  color: #fff;
+}
+.button-container button:last-child {
+  background-color: #fff;
+  color: #000;
+  border: 1px solid #e9ecf1;
 }
