--- a/src/index.css
+++ b/src/index.css
@@ -26,9 +26,9 @@
 .calendar__month {
   display: grid;
   grid-template-columns: repeat(5, minmax(0, 183px));
-  grid-template-rows: repeat(5, minmax(0, 1fr));
-  /* background-color: #fff; */
+  grid-template-rows: repeat(5, minmax(150px, auto));
   column-gap: 1px;
+  /* background-color: #fff; */
   min-height: 100vh;
   /* border-radius: 52px; */
 }
@@ -298,4 +298,24 @@
   background-color: #fff;
   color: #000;
   border: 1px solid #e9ecf1;
+}
+
+.event {
+  background-color: #fff;
+  border: 1px solid #e70029;
+  height: 31px;
+  border-radius: 0.75rem;
+  display: flex;
+  align-items: center;
+  padding: 0.75rem;
+  font-weight: 500;
+  font-size: 10px;
+  margin: 0.5rem 0;
+}
+
+.event p {
+  max-width: 17ch;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
