--- a/src/index.css
+++ b/src/index.css
@@ -25,12 +25,14 @@
 
 .calendar__month {
   display: grid;
-  grid-template-columns: repeat(5, minmax(0, 183px));
+  /* grid-template-columns: repeat(5, minmax(0, 183px)); */
   grid-template-rows: repeat(5, minmax(150px, auto));
   column-gap: 1px;
   /* background-color: #fff; */
   min-height: 100vh;
   /* border-radius: 52px; */
+  position: relative;
+  z-index: 1;
 }
 
 .calendar__header {
@@ -60,7 +62,7 @@
 .day {
   display: flex;
   flex-direction: column;
-  border-left: 1px solid #e9ecf1;
+  /* border-left: 1px solid #e9ecf1; */
   padding: 12px;
   padding-left: 9px;
 }
@@ -310,7 +312,8 @@
   padding: 0.75rem;
   font-weight: 500;
   font-size: 10px;
-  margin: 0.5rem 0;
+  margin: 0 0.25rem;
+  /* width: 180px; */
 }
 
 .event p {
@@ -318,4 +321,109 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+.week {
+  display: grid;
+  grid-template-columns: repeat(5, minmax(0, 183px));
+  grid-template-rows: repeat(5, minmax(0, auto));
+  /* background: transparent; */
+  border-radius: 12px;
+  padding: 12px 0;
+}
+.highlight {
+  background-color: rgba(233, 236, 241, 0.75);
+}
+
+.currentWeekDay {
+  grid-column: 1 / span 5;
+  display: grid;
+  grid-template-columns: subgrid;
+  grid-template-rows: subgrid;
+  /* background-color: yellow; */
+  height: auto;
+}
+
+.events {
+  /* background-color: purple; */
+  display: grid;
+  grid-template-columns: subgrid;
+  grid-column: 1 / span 5;
+  row-gap: 4px;
+  align-items: center;
+}
+
+.event1 {
+  grid-column: 1 / span 3;
+}
+.event2 {
+  grid-column: 4 / 5;
+}
+.event3 {
+  grid-column: 3 / 4;
+}
+.event4 {
+  grid-column: 2 / 4;
+}
+.event5 {
+  grid-column: 5 / span 1;
+}
+
+.month-grid {
+  position: relative;
+  z-index: 2;
+  /* margin-left: 12px; */
+}
+
+.grid-lines {
+  display: grid;
+  grid-template-columns: repeat(5, minmax(0, 183px));
+  grid-template-rows: repeat(5, minmax(150px, auto));
+  column-gap: 1px;
+  /* border: 2px solid red; */
+  /* background-color: blue; */
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  /* margin: 12px; */
+  /* background-color: #fff; */
+}
+
+.grid-lines div {
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+}
+
+[data-span="1"] {
+  grid-column-end: span 1;
+}
+[data-span="2"] {
+  grid-column-end: span 2;
+}
+[data-span="3"] {
+  grid-column-end: span 3;
+}
+[data-span="4"] {
+  grid-column-end: span 4;
+}
+[data-span="5"] {
+  grid-column-end: span 5;
+}
+
+[data-start="1"] {
+  grid-column-start: 1;
+}
+[data-start="2"] {
+  grid-column-start: 2;
+}
+[data-start="3"] {
+  grid-column-start: 3;
+}
+[data-start="4"] {
+  grid-column-start: 4;
+}
+[data-start="5"] {
+  grid-column-start: 5;
 }
