--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@
   /* border-radius: 52px; */
   position: relative;
   z-index: 1;
+  /* background-color: #fff; */
 }
 
 .calendar__header {
@@ -348,25 +349,10 @@
   /* background-color: purple; */
   display: grid;
   grid-template-columns: subgrid;
+  grid-template-rows: min-content;
   grid-column: 1 / span 5;
   row-gap: 4px;
   align-items: center;
-}
-
-.event1 {
-  grid-column: 1 / span 3;
-}
-.event2 {
-  grid-column: 4 / 5;
-}
-.event3 {
-  grid-column: 3 / 4;
-}
-.event4 {
-  grid-column: 2 / 4;
-}
-.event5 {
-  grid-column: 5 / span 1;
 }
 
 .month-grid {
@@ -388,13 +374,16 @@
   z-index: -1;
   /* margin: 12px; */
   /* background-color: #fff; */
+  /* background-color: #e9ecf1; */
+  width: 100%;
+  height: 100%;
 }
 
 .grid-lines div {
-  width: 100%;
-  height: 100%;
   background-color: #fff;
 }
+
+/* events position */
 
 [data-span="1"] {
   grid-column-end: span 1;
