--- a/src/index.css
+++ b/src/index.css
@@ -39,17 +39,17 @@
 .calendar__header {
   background-color: #fff;
   display: flex;
-  justify-content: center;
   align-items: center;
   padding-bottom: 1rem;
+  padding-left: 4.3rem;
 }
 
 .calendar__header--container {
-  width: 250px;
+  /* width: 250px; */
   display: flex;
   /* align-items: center; */
   justify-content: space-between;
-  gap: 1.5rem;
+  gap: 1rem;
   transform: translateX(-50px);
 }
 
@@ -305,7 +305,11 @@
 
 .event {
   background-color: #fff;
-  border: 1px solid #e70029;
+  /* background-color: #00264e; */
+  /* border: 1px solid #00264e; */
+  /* border: 1px solid #e70029; */
+  border: 1px solid #e9ecf1;
+  /* border: none; */
   height: 31px;
   border-radius: 0.75rem;
   display: flex;
@@ -314,6 +318,8 @@
   font-weight: 500;
   font-size: 10px;
   margin: 0 0.25rem;
+  box-shadow: 0px 8px 24px rgba(4, 19, 50, 0.1);
+  /* color: #fff; */
 
   /* width: 180px; */
 }
@@ -435,4 +441,23 @@
 }
 [data-start="5"] {
   grid-column-start: 5;
+}
+
+[data-isfirst="1"] {
+  margin-right: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-right: none;
+}
+[data-ismiddle="1"] {
+  border-radius: 0;
+  margin: 0;
+  border-left: none;
+  border-right: none;
+}
+[data-islast="1"] {
+  margin-left: 0;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  border-left: none;
 }
