--- a/src/index.css
+++ b/src/index.css
@@ -503,3 +503,57 @@
 }
 
 /* loader */
+
+.calendar-nav {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 2.25rem 0.5rem 0;
+}
+
+.nav-link {
+  text-decoration: none;
+  font-family: "Montserrat", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 154px;
+  padding: 14px 16px;
+  border-radius: 12px;
+  background: #e9ecf1;
+  color: #000;
+  font-size: 10px;
+  font-weight: 500;
+}
+
+.active {
+  background: #00264e;
+  color: #fff;
+}
+/* banner */
+
+.banner {
+  max-width: 1280px;
+  height: 240px;
+  width: 100%;
+  margin: 0 auto;
+  display: grid;
+  place-content: center;
+  position: relative;
+}
+
+.banner img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.banner > h1 {
+  color: #fff;
+}
