--- a/src/index.css
+++ b/src/index.css
@@ -305,6 +305,7 @@
 
 .event {
   background-color: #fff;
+  text-decoration: none;
   /* background-color: #00264e; */
   /* border: 1px solid #00264e; */
   /* border: 1px solid #e70029; */
@@ -319,7 +320,7 @@
   font-size: 10px;
   margin: 0 0.25rem;
   box-shadow: 0px 8px 24px rgba(4, 19, 50, 0.1);
-  /* color: #fff; */
+  color: #000;
 
   /* width: 180px; */
 }
@@ -554,6 +555,26 @@
   z-index: -1;
 }
 
-.banner > h1 {
+.banner > p {
   color: #fff;
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+/* event info */
+
+.event-info {
+  background-color: #f0eded;
+  height: 100vh;
+  width: 640px;
+  position: fixed;
+  top: 0;
+  right: -100%;
+  z-index: 999;
+  font-weight: 600;
+  transition: all 1s ease;
+}
+
+.slide-in {
+  right: 0%;
 }
