--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   padding: 1.5rem 0.5rem 2.75rem;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .calendar__wrapper {
@@ -564,17 +565,156 @@
 /* event info */
 
 .event-info {
-  background-color: #f0eded;
+  background-color: #fff;
   height: 100vh;
   width: 640px;
   position: fixed;
   top: 0;
-  right: -100%;
+  /* right: -100%; */
+  right: 0;
   z-index: 999;
-  font-weight: 600;
   transition: all 1s ease;
+  display: block;
+  padding: 70px 56px 50px;
+  overflow-y: auto;
 }
 
-.slide-in {
-  right: 0%;
+.close-sidebar {
+  display: none;
+}
+
+/* overlay */
+
+.overlay {
+  width: 100%;
+  height: 100vh;
+  background-color: #565e6b;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 998;
+  opacity: 0.32;
+}
+
+.close-sidebar-btn {
+  position: absolute;
+  top: 1.5rem;
+  left: 1.5rem;
+  z-index: 999;
+}
+
+.close-sidebar-btn svg {
+  font-size: 14px;
+}
+
+.event-info-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 10px;
+  margin-bottom: 1.5rem;
+}
+.event-info-header svg {
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.time-date-container {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.time-date-container .date {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+.time-date-container .time {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+.event-info-header .share {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+
+.info-text {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  grid-template-rows: repeat(5, 1fr);
+  column-gap: 2rem;
+  row-gap: 0.5rem;
+  font-size: 14px;
+}
+
+.type {
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
+  margin-bottom: 0.5rem;
+}
+
+.type p {
+  font-size: 0.75rem;
+}
+
+.type svg {
+  font-size: 1.5rem;
+}
+
+.info-title {
+  margin-bottom: 1.5rem;
+  font-weight: 500;
+  line-height: 40px;
+}
+
+.info-text {
+  padding: 1.5rem 0 0.5rem;
+  margin-bottom: 1.5rem;
+  font-weight: 500;
+  border: 1px solid #e5e8ef;
+  border-left: none;
+  border-right: none;
+}
+
+.info-text p:nth-child(odd) {
+  color: rgba(0, 0, 0, 0.4);
+}
+
+.info-text p:last-child {
+  color: #000;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  padding-top: 1.5rem;
+}
+
+.info-button-container button {
+  width: 197px;
+  height: 48px;
+  border: none;
+  outline: none;
+  background-color: #e40038;
+  color: #fff;
+  border-radius: 0.75rem;
+  font-size: 0.75rem;
+  font-weight: 600;
+  cursor: pointer;
+  /* letter-spacing: -0.24px; */
+}
+
+/* scrollbar styling */
+
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #e9ecf1;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #bec0cd;
+  border-radius: 10px;
 }
