--- a/src/index.css
+++ b/src/index.css
@@ -261,26 +261,56 @@
   margin: 1.5rem 0;
 }
 
-.select-input select {
+.format-select,
+.type-select {
   border: 0;
   outline: none;
   background-color: #e9ecf1;
-  border-radius: 0.75rem;
+  border-radius: 0.5rem;
   padding: 0.75rem 1rem;
   width: 274px;
   cursor: pointer;
   font-weight: 500;
   letter-spacing: 0.32px;
+  font-size: 0.875rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: left;
 }
 
-/* .select-input option {
-  background-color: #f9fafc;
-  padding: 0.75rem 1rem;
+.select-input ul {
+  background-color: #e9ecf1;
+  list-style: none;
+  border-radius: 0.75rem;
+
   width: 274px;
   cursor: pointer;
   font-weight: 500;
   letter-spacing: 0.32px;
-} */
+  font-size: 0.875rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1px;
+  box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.12);
+}
+.select-input li {
+  background-color: #fff;
+  padding: 0.75rem 1rem;
+  transition: all 0.2s ease;
+}
+.select-input li:first-child {
+  border-top-left-radius: 0.75rem;
+  border-top-right-radius: 0.75rem;
+}
+.select-input li:last-child {
+  border-bottom-left-radius: 0.75rem;
+  border-bottom-right-radius: 0.75rem;
+}
+
+.select-input li:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+}
 
 .button-container button {
   border: none;
@@ -642,6 +672,7 @@
   background-color: transparent;
   cursor: pointer;
   transition: all 0.1s ease;
+  font-size: 10px;
 }
 
 .event-info-header .share:active {
