--- a/src/index.css
+++ b/src/index.css
@@ -179,16 +179,23 @@
 .search-form {
   width: 100%;
   margin: 0 auto 2.5rem;
-  display: flex;
-  gap: 0.5rem;
+  /* display: flex; */
+  column-gap: 0.5rem;
   /* ---- */
+  /* position: relative; */
+  display: grid;
+  grid-template-columns: 1fr 120px;
+}
+.search-input-container {
   position: relative;
+  /* width: 100%; */
 }
 
 .search-form__input {
   display: block;
   background-color: #e9ecf1;
-  width: calc(100% - 128px);
+  /* width: calc(100% - 128px); */
+  width: 100%;
   border: none;
   outline: none;
   height: 48px;
@@ -214,6 +221,24 @@
   left: 21px;
   transform: scale(1.2);
   color: rgba(0, 0, 0, 0.5);
+}
+
+.search-reset-icon {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  transform: scale(1.2);
+  color: rgba(0, 0, 0, 0.5);
+  background-color: transparent;
+  border: none;
+  outline: none;
+  padding: 10px;
+  cursor: pointer;
+  transition: 0.2s ease;
+}
+
+.search-reset-icon:hover {
+  color: #e40038;
 }
 
 /* days past */
@@ -354,6 +379,10 @@
   color: #000;
 
   /* width: 180px; */
+}
+
+.event-registered {
+  border: 1px solid #e40038;
 }
 
 .multiWeekEventStart {
@@ -728,6 +757,7 @@
   padding-top: 1.5rem;
   display: flex;
   flex-direction: column;
+  align-items: left;
   gap: 1rem;
 }
 
