--- a/src/index.css
+++ b/src/index.css
@@ -225,9 +225,10 @@
 
 .search-reset-icon {
   position: absolute;
+  display: grid;
+  place-content: center;
   top: 0.5rem;
   right: 0.5rem;
-  transform: scale(1.2);
   color: rgba(0, 0, 0, 0.5);
   background-color: transparent;
   border: none;
