--- a/src/index.css
+++ b/src/index.css
@@ -213,6 +213,7 @@
   height: 48px;
   border-radius: 12px;
   cursor: pointer;
+  box-shadow: 0px 8px 24px rgba(50, 4, 36, 0.1);
 }
 
 .search-icon {
@@ -271,6 +272,8 @@
   width: 1.125rem;
   height: 1.125rem;
   cursor: pointer;
+  border: none;
+  outline: none;
 }
 
 .checkbox-input label {
@@ -348,6 +351,7 @@
   border-radius: 0.75rem;
   cursor: pointer;
   letter-spacing: 0.25px;
+  box-shadow: 0px 8px 24px rgba(50, 4, 36, 0.1);
 }
 
 .button-container button:first-child {
@@ -376,7 +380,7 @@
   font-weight: 500;
   font-size: 10px;
   margin: 0 0.25rem;
-  box-shadow: 0px 8px 24px rgba(4, 19, 50, 0.1);
+  box-shadow: 0px 8px 24px rgba(50, 4, 36, 0.1);
   color: #000;
 
   /* width: 180px; */
