--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,23 @@
   font-family: "Montserrat", sans-serif;
 }
 
+/* main colors */
+:root {
+  --red: #e40038;
+  --blue: #00234d;
+  --grey-light: #edf0f5;
+  --grey: #e9ecf1;
+  --grey-highlight: #e9ecf1bf;
+  --shadow: 0px 8px 24px rgba(50, 4, 36, 0.1);
+  --white: #fff;
+  --black: #000;
+  --black-shade: rgba(0, 0, 0, 0.5);
+  --max_width: 757px;
+  --margin_center: 0 auto;
+}
+
+/* calendar */
+
 .calendar {
   min-height: 100vh;
   max-width: 1200px;
@@ -38,7 +55,7 @@
 }
 
 .calendar__header {
-  background-color: #fff;
+  background-color: var(--white);
   display: flex;
   align-items: center;
   padding-bottom: 1rem;
@@ -90,7 +107,7 @@
 .weekdays {
   display: flex;
   flex-direction: column;
-  background-color: #e9ecf1;
+  background-color: var(--grey);
 }
 
 .weekdays__header {
@@ -105,11 +122,11 @@
   line-height: 2.5rem;
   /* padding: 0.25rem; */
   padding-left: 1.25rem;
-  background-color: #fff;
+  background-color: var(--white);
 }
 
 .highlightDay {
-  color: #ff0000;
+  color: var(--red);
 }
 
 .btn-container {
@@ -118,7 +135,7 @@
 }
 
 .arrow {
-  background-color: #fff;
+  background-color: var(--white);
   border: none;
   outline: none;
 }
@@ -131,7 +148,7 @@
 }
 
 .highlightWeek {
-  background-color: rgba(233, 236, 241, 0.75);
+  background-color: var(--grey-highlight);
 }
 
 .highlightWeek.leftRounded {
@@ -193,7 +210,7 @@
 
 .search-form__input {
   display: block;
-  background-color: #e9ecf1;
+  background-color: var(--grey);
   /* width: calc(100% - 128px); */
   width: 100%;
   border: none;
@@ -205,15 +222,15 @@
 
 .search-form__btn {
   display: block;
-  background-color: #ff0000;
-  color: #fff;
+  background-color: var(--red);
+  color: var(--white);
   width: 120px;
   border: none;
   outline: none;
   height: 48px;
   border-radius: 12px;
   cursor: pointer;
-  box-shadow: 0px 8px 24px rgba(50, 4, 36, 0.1);
+  box-shadow: var(--shadow);
 }
 
 .search-icon {
@@ -221,7 +238,7 @@
   top: 16px;
   left: 21px;
   transform: scale(1.2);
-  color: rgba(0, 0, 0, 0.5);
+  color: var(--black-shade);
 }
 
 .search-reset-icon {
@@ -230,7 +247,7 @@
   place-content: center;
   top: 0.5rem;
   right: 0.5rem;
-  color: rgba(0, 0, 0, 0.5);
+  color: var(--black-shade);
   background-color: transparent;
   border: none;
   outline: none;
@@ -240,7 +257,7 @@
 }
 
 .search-reset-icon:hover {
-  color: #e40038;
+  color: var(--red);
 }
 
 /* days past */
@@ -268,7 +285,7 @@
   margin-top: 0.5rem;
 }
 .checkbox-input input[type="checkbox"] {
-  accent-color: #e40038;
+  accent-color: var(--red);
   width: 1.125rem;
   height: 1.125rem;
   cursor: pointer;
@@ -294,7 +311,7 @@
 .type-select {
   border: 0;
   outline: none;
-  background-color: #e9ecf1;
+  background-color: var(--grey);
   border-radius: 0.5rem;
   padding: 0.75rem 1rem;
   width: 274px;
@@ -309,7 +326,7 @@
 }
 
 .select-input ul {
-  background-color: #e9ecf1;
+  background-color: var(--grey);
   list-style: none;
   border-radius: 0.75rem;
 
@@ -351,26 +368,26 @@
   border-radius: 0.75rem;
   cursor: pointer;
   letter-spacing: 0.25px;
-  box-shadow: 0px 8px 24px rgba(50, 4, 36, 0.1);
+  box-shadow: var(--shadow);
 }
 
 .button-container button:first-child {
-  background-color: #e70029;
-  color: #fff;
+  background-color: var(--red);
+  color: var(--white);
 }
 .button-container button:last-child {
-  background-color: #fff;
-  color: #000;
-  border: 1px solid #e9ecf1;
+  background-color: var(--white);
+  color: var(--black);
+  border: 1px solid var(--grey);
 }
 
 .event {
-  background-color: #fff;
+  background-color: var(--white);
   text-decoration: none;
   /* background-color: #00264e; */
   /* border: 1px solid #00264e; */
   /* border: 1px solid #e70029; */
-  border: 1px solid #e9ecf1;
+  border: 1px solid var(--grey);
   /* border: none; */
   height: 31px;
   border-radius: 0.75rem;
@@ -380,14 +397,14 @@
   font-weight: 500;
   font-size: 10px;
   margin: 0 0.25rem;
-  box-shadow: 0px 8px 24px rgba(50, 4, 36, 0.1);
-  color: #000;
+  box-shadow: var(--shadow);
+  color: var(--black);
 
   /* width: 180px; */
 }
 
 .event-registered {
-  border: 1px solid #e40038;
+  border: 1px solid var(--red);
 }
 
 .multiWeekEventStart {
@@ -535,10 +552,10 @@
   place-content: center;
 }
 .loader {
-  background-color: #00264e;
+  background-color: var(--blue);
   width: 48px;
   height: 48px;
-  border: 3px solid #fff;
+  border: 3px solid var(--white);
   border-radius: 50%;
   display: inline-block;
   position: relative;
@@ -556,7 +573,7 @@
   height: 56px;
   border-radius: 50%;
   border: 3px solid;
-  border-color: #e70029 transparent;
+  border-color: var(--red) transparent;
 }
 
 @keyframes rotation {
@@ -568,7 +585,7 @@
   }
 }
 
-/* loader */
+/* nav */
 
 .calendar-nav {
   display: flex;
@@ -588,15 +605,15 @@
   width: 154px;
   padding: 14px 16px;
   border-radius: 12px;
-  background: #e9ecf1;
-  color: #000;
+  background: var(--grey);
+  color: var(--black);
   font-size: 10px;
   font-weight: 500;
 }
 
 .active {
-  background: #00264e;
-  color: #fff;
+  background: var(--blue);
+  color: var(--white);
 }
 /* banner */
 
@@ -621,7 +638,7 @@
 }
 
 .banner > p {
-  color: #fff;
+  color: var(--white);
   font-size: 2rem;
   font-weight: 600;
 }
@@ -629,7 +646,7 @@
 /* event info */
 
 .event-info {
-  background-color: #fff;
+  background-color: var(--white);
   height: 100vh;
   width: 640px;
   position: fixed;
@@ -669,11 +686,11 @@
 
 .close-sidebar-btn svg {
   font-size: 14px;
-  color: #000;
+  color: var(--black);
 }
 
 .close-sidebar-btn svg:hover {
-  color: #e40038;
+  color: var(--red);
 }
 .event-info-header {
   display: flex;
@@ -751,7 +768,7 @@
   padding: 1.5rem 0 0.5rem;
   margin-bottom: 1.5rem;
   font-weight: 500;
-  border: 1px solid #e5e8ef;
+  border: 1px solid var(--grey);
   border-left: none;
   border-right: none;
 }
@@ -771,7 +788,7 @@
 }
 
 .info-text p:last-child * {
-  color: #000;
+  color: var(--black);
 }
 
 .info-button-container button {
@@ -779,8 +796,8 @@
   height: 48px;
   border: none;
   outline: none;
-  background-color: #e40038;
-  color: #fff;
+  background-color: var(--red);
+  color: var(--white);
   border-radius: 0.75rem;
   font-size: 0.75rem;
   font-weight: 600;
@@ -795,10 +812,38 @@
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #e9ecf1;
+  background-color: var(--grey);
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: #bec0cd;
   border-radius: 10px;
+}
+
+/* error page */
+
+.error-page {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.error-page h1 {
+  font-size: 12rem;
+  color: var(--blue);
+}
+.error-page p {
+  font-weight: 500;
+}
+
+.error-page a {
+  text-decoration: none;
+  color: var(--white);
+  background-color: var(--red);
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
 }
